--- a/index.html
+++ b/index.html
@@ -837,5 +837,37 @@
       window.scrollTo({ top: 0, behavior: 'smooth' });
     });
   </script>
+  <script type="module">
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+  import { getAuth, onAuthStateChanged, signOut } 
+    from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+  const firebaseConfig = {
+    apiKey: "AIzaSyCoyCAdEmG9nSWmYhDTYtzkarNm12L0150",
+    authDomain: "monex-academ.firebaseapp.com",
+    projectId: "monex-academ",
+    storageBucket: "monex-academ.appspot.com",
+    messagingSenderId: "739982923559",
+    appId: "1:739982923559:web:82432263c1758861d3fb02",
+    measurementId: "G-V33BX5JMNV"
+  };
+
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+
+  // حماية الرئيسية
+  onAuthStateChanged(auth, (user) => {
+    if (!user) {
+      window.location.href = "login.html";
+    }
+  });
+
+  // تسجيل الخروج
+  window.logout = function () {
+    signOut(auth).then(() => {
+      window.location.href = "login.html";
+    });
+  };
+</script>
 </body>
 </html>
