--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تسجيل الدخول | أكاديمية مونكس</title>
   <style>
     :root {
@@ -21,29 +22,28 @@
       font-family: "Cairo", sans-serif;
       background: linear-gradient(160deg, var(--bg-dark), var(--bg-dark2));
       color: var(--text);
-      display: flex;
-      justify-content: center;
-      align-items: center;
       min-height: 100vh;
-      padding: 20px;
+      display: flex;
+      flex-direction: column;
     }
 
     .login-box {
-      background: rgba(21,21,24,0.6);
-      padding: 30px;
-      border-radius: var(--radius);
-      width: 100%;
-      max-width: 380px;
-      box-shadow: var(--shadow);
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 32px 20px;
+      background: rgba(21,21,24,0.65);
+      border-radius: 0;
+      box-shadow: none;
       backdrop-filter: blur(8px);
-      border: 1px solid rgba(212,175,55,.25);
-      text-align: center;
     }
 
     h2 {
-      margin-bottom: 20px;
-      font-size: 24px;
+      margin-bottom: 24px;
+      font-size: clamp(24px, 6vw, 30px);
       font-weight: bold;
+      text-align: center;
       background: linear-gradient(92deg, var(--gold), var(--gold-light));
       -webkit-background-clip: text;
       background-clip: text;
@@ -52,12 +52,12 @@
 
     input {
       width: 100%;
-      padding: 12px;
-      margin: 10px 0;
+      padding: 16px;
+      margin: 12px 0;
       border: 1px solid rgba(212,175,55,.3);
       border-radius: 12px;
       outline: none;
-      font-size: 14px;
+      font-size: 16px;
       background: rgba(255,255,255,0.05);
       color: var(--text);
       transition: border .3s, box-shadow .3s;
@@ -70,12 +70,12 @@
 
     .btn {
       width: 100%;
-      padding: 12px;
-      margin-top: 10px;
+      padding: 16px;
+      margin-top: 14px;
       border: none;
       border-radius: 12px;
       cursor: pointer;
-      font-size: 15px;
+      font-size: 17px;
       font-weight: bold;
       transition: 0.3s;
     }
@@ -101,11 +101,12 @@
     }
 
     .back-link {
-      display: inline-block;
-      margin-top: 15px;
+      display: block;
+      margin-top: 20px;
+      text-align: center;
       color: var(--gold-light);
       text-decoration: none;
-      font-size: 14px;
+      font-size: 15px;
     }
 
     .back-link:hover {
