--- a/login.html
+++ b/login.html
@@ -1,214 +1,160 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>تسجيل الدخول | أكاديمية مونكس</title>
   <style>
-    :root {
-      --gold: #d4af37;
-      --gold-light: #f9e07f;
-      --bg-dark: #0b0b0c;
-      --bg-dark2: #151518;
-      --text: #f7f7f7;
-      --radius: 20px;
-      --shadow: 0 12px 35px rgba(0,0,0,.5);
-    }
-
     body {
       margin: 0;
       font-family: "Cairo", sans-serif;
-      background: linear-gradient(145deg, var(--bg-dark), var(--bg-dark2));
-      color: var(--text);
       min-height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
       padding: 20px;
+      background: linear-gradient(145deg, #0b0b0c, #151518);
+      color: #f7f7f7;
+      overflow: hidden;
+      position: relative;
+    }
+
+    /* خلفية 3D متحركة */
+    body::before {
+      content: "";
+      position: absolute;
+      top: -50%;
+      left: -50%;
+      width: 200%;
+      height: 200%;
+      background: conic-gradient(from 180deg, #d4af37, #f9e07f, #0b0b0c, #151518, #d4af37);
+      animation: rotateBg 12s linear infinite;
+      z-index: 0;
+      transform-style: preserve-3d;
+    }
+
+    body::after {
+      content: "";
+      position: absolute;
+      inset: 0;
+      background: rgba(0,0,0,0.7); /* عشان يبان النص واضح */
+      z-index: 1;
+    }
+
+    @keyframes rotateBg {
+      from { transform: rotate(0deg) translateZ(0); }
+      to   { transform: rotate(360deg) translateZ(0); }
     }
 
     .login-box {
+      position: relative;
+      z-index: 2;
+      background: rgba(255,255,255,0.05);
+      padding: 30px;
+      border-radius: 15px;
+      backdrop-filter: blur(10px);
+      box-shadow: 0 0 20px rgba(0,0,0,0.5);
       width: 100%;
-      max-width: 400px;
-      padding: 40px 30px;
-      background: rgba(21,21,24,0.75);
-      border-radius: var(--radius);
-      box-shadow: var(--shadow);
-      backdrop-filter: blur(12px);
-      animation: fadeIn 0.8s ease;
+      max-width: 350px;
       text-align: center;
     }
 
-    .logo {
-      width: 90px;
-      height: 90px;
-      border-radius: 50%;
+    .login-box h2 {
+      margin-bottom: 20px;
+      color: #f7f7f7;
+    }
+
+    .input-group {
       margin-bottom: 15px;
-      object-fit: cover;
-      border: 3px solid var(--gold);
-      box-shadow: 0 0 20px rgba(212,175,55,.4);
-      animation: glow 2s infinite alternate;
+      text-align: right;
     }
 
-    h2 {
-      margin-bottom: 24px;
-      font-size: 26px;
-      font-weight: bold;
-      text-align: center;
-      background: linear-gradient(92deg, var(--gold), var(--gold-light));
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
+    .input-group label {
+      display: block;
+      margin-bottom: 5px;
+      font-size: 14px;
     }
 
-    input {
+    .input-group input {
       width: 100%;
-      padding: 14px 16px;
-      margin: 10px 0;
-      border: 1px solid rgba(212,175,55,.35);
-      border-radius: 12px;
+      padding: 10px;
+      border: none;
+      border-radius: 8px;
       outline: none;
-      font-size: 16px;
-      background: rgba(255,255,255,0.06);
-      color: var(--text);
-      transition: border .3s, box-shadow .3s, transform .2s;
-    }
-
-    input:focus {
-      border-color: var(--gold);
-      box-shadow: 0 0 0 3px rgba(212,175,55,.25);
-      transform: scale(1.02);
     }
 
     .btn {
-      width: 100%;
-      padding: 14px;
-      margin-top: 14px;
-      border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 16px;
-      font-weight: bold;
-      transition: all 0.3s ease;
-    }
-
-    .btn-login {
-      background: linear-gradient(92deg, var(--gold), var(--gold-light));
-      color: #1b1400;
-      box-shadow: 0 6px 20px rgba(212,175,55,.25);
-    }
-
-    .btn-login:hover {
-      transform: translateY(-2px) scale(1.02);
-      box-shadow: 0 8px 24px rgba(212,175,55,.35);
-    }
-
-    .back-link {
       display: block;
-      margin-top: 20px;
-      text-align: center;
-      color: var(--gold-light);
-      text-decoration: none;
-      font-size: 15px;
-      transition: color .3s;
+      width: 100%;
+      padding: 12px;
+      background: #d4af37;
+      color: #000;
+      border: none;
+      border-radius: 8px;
+      font-weight: bold;
+      cursor: pointer;
+      transition: 0.3s;
     }
 
-    .back-link:hover {
-      text-decoration: underline;
-      color: var(--gold);
+    .btn:hover {
+      background: #b9972c;
     }
 
-    /* رابط إنستغرام */
-    .ig-link {
+    /* زر إنستغرام */
+    .ig-btn {
       display: inline-flex;
       align-items: center;
       justify-content: center;
       gap: 8px;
-      margin-top: 15px;
-      font-size: 15px;
-      font-weight: bold;
+      margin-top: 20px;
+      padding: 10px 15px;
+      border-radius: 8px;
+      border: 1px solid #e1306c;
       color: #e1306c;
       text-decoration: none;
-      transition: color .3s;
+      font-weight: bold;
+      transition: 0.3s;
     }
-    .ig-link svg {
+
+    .ig-btn svg {
       width: 22px;
       height: 22px;
       fill: #e1306c;
-      transition: fill .3s;
     }
-    .ig-link:hover {
+
+    .ig-btn:hover {
+      background: #e1306c;
       color: #fff;
     }
-    .ig-link:hover svg {
+
+    .ig-btn:hover svg {
       fill: #fff;
     }
-
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(20px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes glow {
-      from { box-shadow: 0 0 10px rgba(212,175,55,.3); }
-      to   { box-shadow: 0 0 25px rgba(212,175,55,.6); }
-    }
   </style>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged }
-      from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCoyCAdEmG9nSWmYhDTYtzkarNml2LOl5o",
-      authDomain: "monex-academ.firebaseapp.com",
-      projectId: "monex-academ",
-      storageBucket: "monex-academ.appspot.com",
-      messagingSenderId: "739982923559",
-      appId: "1:739982923559:web:82432263c1758861d3fb02",
-      measurementId: "G-V33BX5JMNV"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    window.login = function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => window.location.href = "index.html")
-        .catch((error) => alert(error.message));
-    };
-
-    window.goHome = function () {
-      onAuthStateChanged(auth, (user) => {
-        if (user) {
-          window.location.href = "index.html";
-        } else {
-          alert("⚠ يجب تسجيل الدخول أولاً للوصول إلى الرئيسية.");
-        }
-      });
-    };
-  </script>
 </head>
 <body>
   <div class="login-box">
-    <img class="logo" src="524295278_1909982526403223_6740863275995580947_n.jpg" alt="شعار الأكاديمية">
     <h2>تسجيل الدخول</h2>
-    <input type="email" id="email" placeholder="البريد الإلكتروني">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <button class="btn btn-login" onclick="login()">دخول</button>
 
-    <!-- رابط إنستغرام مع الاسم -->
-    <a class="ig-link" href="https://www.instagram.com/monex_academy/" target="_blank" rel="noopener" aria-label="Instagram">
+    <div class="input-group">
+      <label for="email">البريد الإلكتروني</label>
+      <input type="email" id="email" placeholder="example@mail.com">
+    </div>
+
+    <div class="input-group">
+      <label for="password">كلمة المرور</label>
+      <input type="password" id="password" placeholder="********">
+    </div>
+
+    <button class="btn">تسجيل الدخول</button>
+
+    <!-- أيقونة إنستغرام -->
+    <a href="https://www.instagram.com/monex_academy/" target="_blank" rel="noopener" class="ig-btn">
       <svg viewBox="0 0 24 24" aria-hidden="true">
         <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm0 2a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3H7zm5 3a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm6-0.5a1 1 0 1 1 0 2 1 1 0 0 1 0-2z"/>
       </svg>
       monex_academy
     </a>
-
-    <a class="back-link" href="#" onclick="goHome()">⬅ الرجوع إلى الرئيسية</a>
   </div>
 </body>
 </html>
