--- a/login.html
+++ b/login.html
@@ -7,158 +7,200 @@
   <style>
     :root {
       --gold: #d4af37;
-      --dark-bg: #0b0b0c;
-      --light-bg: #151518;
+      --dark-bg: #0a0a0a;
     }
-
     body {
       margin: 0;
-      font-family: "Cairo", sans-serif;
-      min-height: 100vh;
+      height: 100vh;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 20px;
-      background: linear-gradient(145deg, var(--dark-bg), var(--light-bg));
-      color: #f7f7f7;
+      background: linear-gradient(135deg, #000, #1a1a1a);
       overflow: hidden;
-      position: relative;
+      font-family: sans-serif;
     }
-
-    /* خلفية 3D متحركة */
+    /* خلفية 3D */
     body::before {
       content: "";
       position: absolute;
-      top: -50%;
-      left: -50%;
       width: 200%;
       height: 200%;
-      background: conic-gradient(from 180deg, var(--gold), #f9e07f, var(--dark-bg), var(--light-bg), var(--gold));
-      animation: rotateBg 12s linear infinite;
-      z-index: 0;
-      transform-style: preserve-3d;
+      background: radial-gradient(circle, rgba(212,175,55,0.15) 10%, transparent 10%) repeat;
+      background-size: 60px 60px;
+      animation: move 15s linear infinite;
+      transform: rotate(25deg);
     }
-
-    body::after {
-      content: "";
-      position: absolute;
-      inset: 0;
-      background: rgba(0,0,0,0.75); 
-      z-index: 1;
+    @keyframes move {
+      from { background-position: 0 0; }
+      to { background-position: 60px 60px; }
     }
 
     .login-box {
       position: relative;
-      z-index: 2;
-      background: rgba(21, 21, 24, 0.9);
-      padding: 30px;
+      background: rgba(20,20,20,0.95);
+      padding: 25px;
       border-radius: 15px;
-      width: 100%;
-      max-width: 360px;
       text-align: center;
-      box-shadow: 0 0 25px rgba(212, 175, 55, 0.4);
-      border: 1px solid rgba(212, 175, 55, 0.5);
-      backdrop-filter: blur(10px);
+      color: white;
+      width: 90%;
+      max-width: 360px;
+      box-shadow: 0 0 25px rgba(0,0,0,0.8);
+      z-index: 1;
     }
 
-    /* الشعار مع تأثير 3D */
     .logo {
       width: 90px;
       height: 90px;
       border-radius: 50%;
-      margin-bottom: 15px;
       object-fit: cover;
       border: 3px solid var(--gold);
       box-shadow: 0 0 20px rgba(212,175,55,.4),
                   0 8px 15px rgba(0,0,0,0.6);
       animation: glow 2s infinite alternate;
-      transform: perspective(600px) rotateX(5deg) rotateY(-5deg);
+      margin-bottom: 15px;
+    }
+    @keyframes glow {
+      from { box-shadow: 0 0 10px var(--gold); }
+      to { box-shadow: 0 0 25px var(--gold); }
     }
 
-    .login-box h2 {
+    h2 {
       margin-bottom: 20px;
       color: var(--gold);
     }
 
-    .btn {
-      display: block;
+    input {
       width: 100%;
       padding: 12px;
-      margin: 15px 0;
-      background: var(--gold);
+      margin: 8px 0;
       border: none;
       border-radius: 8px;
-      color: #000;
+      font-size: 14px;
+    }
+
+    button {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      border-radius: 8px;
+      background: var(--gold);
+      color: black;
       font-size: 16px;
-      cursor: pointer;
-      transition: 0.3s;
       font-weight: bold;
+      cursor: pointer;
+      transition: transform 0.2s;
+      margin-top: 10px;
+    }
+    button:hover {
+      transform: scale(1.05);
     }
 
-    .btn:hover {
-      background: #f9e07f;
-      transform: translateY(-2px);
+    .google-btn {
+      background: white;
+      color: black;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 8px;
+    }
+    .google-btn img {
+      width: 18px;
+      height: 18px;
     }
 
-    /* إنستغرام */
     .social {
       margin-top: 20px;
     }
     .social a {
-      color: var(--gold);
-      text-decoration: none;
-      font-size: 16px;
-      display: inline-flex;
+      display: flex;
+      justify-content: center;
       align-items: center;
       gap: 8px;
-      transition: 0.3s;
+      text-decoration: none;
+      color: white;
+      font-size: 15px;
+      transition: color 0.3s;
     }
     .social a:hover {
-      color: #f9e07f;
-      transform: scale(1.05);
+      color: var(--gold);
     }
     .social svg {
       width: 20px;
       height: 20px;
+      fill: currentColor;
     }
 
-    @keyframes glow {
-      from { box-shadow: 0 0 5px var(--gold), 0 0 10px var(--gold); }
-      to   { box-shadow: 0 0 20px var(--gold), 0 0 30px var(--gold); }
-    }
-
-    @keyframes rotateBg {
-      from { transform: rotate(0deg) translateZ(0); }
-      to   { transform: rotate(360deg) translateZ(0); }
+    @media (max-width: 400px) {
+      .login-box { padding: 20px; }
+      button { font-size: 14px; padding: 10px; }
     }
   </style>
 </head>
 <body>
   <div class="login-box">
-    <!-- الشعار -->
     <img class="logo" src="524295278_1909982526403223_6740863275995580947_n.jpg" alt="شعار الأكاديمية">
     <h2>تسجيل الدخول</h2>
 
-    <!-- زر الدخول -->
-    <button class="btn" onclick="loginWithGoogle()">تسجيل الدخول عبر Google</button>
+    <!-- فورم تسجيل دخول -->
+    <input type="email" id="email" placeholder="البريد الإلكتروني" required>
+    <input type="password" id="password" placeholder="كلمة المرور" required>
+    <button onclick="loginWithEmail()">تسجيل الدخول</button>
 
-    <!-- إنستغرام -->
+    <!-- تسجيل دخول بجوجل -->
+    <button class="google-btn" onclick="loginWithGoogle()">
+      <img src="https://www.gstatic.com/firebasejs/ui/2.0.0/images/auth/google.svg" alt="Google">
+      <span>تسجيل الدخول باستخدام Google</span>
+    </button>
+
     <div class="social">
       <a href="https://www.instagram.com/monex_academy/" target="_blank">
-        <!-- أيقونة إنستغرام SVG -->
-        <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 24 24">
-          <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9a5.5 5.5 0 0 1-5.5 5.5h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2zm0 2A3.5 3.5 0 0 0 4 7.5v9A3.5 3.5 0 0 0 7.5 20h9a3.5 3.5 0 0 0 3.5-3.5v-9A3.5 3.5 0 0 0 16.5 4h-9zM12 7a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.75-.25a1.25 1.25 0 1 1-2.5 0 1.25 1.25 0 0 1 2.5 0z"/>
-        </svg>
-        monex_academy
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M7 2C4.243 2 2 4.243 2 7v10c0 2.757 2.243 5 5 5h10c2.757 0 5-2.243 5-5V7c0-2.757-2.243-5-5-5H7zm0 2h10c1.654 0 3 1.346 3 3v10c0 1.654-1.346 3-3 3H7c-1.654 0-3-1.346-3-3V7c0-1.654 1.346-3 3-3zm10 1a1 1 0 100 2 1 1 0 000-2zM12 7a5 5 0 100 10 5 5 0 000-10zm0 2a3 3 0 110 6 3 3 0 010-6z"/></svg>
+        <span>@monex_academy</span>
       </a>
     </div>
   </div>
 
   <script type="module">
-    // Firebase login code هنا
-    function loginWithGoogle() {
-      alert("تسجيل الدخول عبر Google"); 
+    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
+    import { getAuth, signInWithEmailAndPassword, signInWithPopup, GoogleAuthProvider } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
+
+    const firebaseConfig = {
+      apiKey: "YOUR_API_KEY",
+      authDomain: "YOUR_PROJECT_ID.firebaseapp.com",
+      projectId: "YOUR_PROJECT_ID",
+      storageBucket: "YOUR_PROJECT_ID.appspot.com",
+      messagingSenderId: "YOUR_SENDER_ID",
+      appId: "YOUR_APP_ID"
+    };
+    const app = initializeApp(firebaseConfig);
+    const auth = getAuth(app);
+    const provider = new GoogleAuthProvider();
+
+    // تسجيل دخول بالبريد وكلمة السر
+    function loginWithEmail() {
+      const email = document.getElementById("email").value;
+      const password = document.getElementById("password").value;
+      signInWithEmailAndPassword(auth, email, password)
+        .then(userCredential => {
+          window.location.href = "index.html";
+        })
+        .catch(error => {
+          alert("خطأ: " + error.message);
+        });
     }
+    window.loginWithEmail = loginWithEmail;
+
+    // تسجيل دخول بجوجل
+    function loginWithGoogle() {
+      signInWithPopup(auth, provider)
+        .then(result => {
+          window.location.href = "index.html";
+        })
+        .catch(error => {
+          alert("فشل تسجيل الدخول: " + error.message);
+        });
+    }
+    window.loginWithGoogle = loginWithGoogle;
   </script>
 </body>
 </html>
