--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
       --gold: #d4af37;
       --gold-light: #f9e07f;
       --bg-dark: #0b0b0c;
-      --bg-dark2: #151518;
       --text: #f7f7f7;
       --radius: 20px;
       --shadow: 0 12px 35px rgba(0,0,0,.6);
@@ -65,18 +64,21 @@
       width: 100%;
       padding: 14px 16px;
       margin: 10px 0;
-      border: 1px solid rgba(212,175,55,.35);
+      border: none;
       border-radius: 12px;
       outline: none;
       font-size: 15px;
-      background: rgba(255,255,255,0.05);
+      background: #1a1a1d;
       color: var(--text);
+      box-shadow: inset -3px -3px 6px rgba(255,255,255,.07),
+                  inset 3px 3px 6px rgba(0,0,0,.6);
       transition: all .3s;
     }
 
     input:focus {
-      border-color: var(--gold);
-      box-shadow: 0 0 10px rgba(212,175,55,.4);
+      box-shadow: inset -4px -4px 8px rgba(255,255,255,.1),
+                  inset 4px 4px 8px rgba(0,0,0,.7),
+                  0 0 10px rgba(212,175,55,.4);
       transform: scale(1.02);
     }
 
@@ -89,42 +91,27 @@
       cursor: pointer;
       font-size: 15px;
       font-weight: bold;
-      transition: all 0.3s ease;
-    }
-
-    .btn-login {
+      transition: all 0.2s ease;
       background: linear-gradient(92deg, var(--gold), var(--gold-light));
       color: #1b1400;
       box-shadow: 0 6px 18px rgba(212,175,55,.3);
+      perspective: 500px;
+      transform-style: preserve-3d;
     }
 
-    .btn-login:hover {
-      transform: translateY(-2px) scale(1.03);
+    .btn:hover {
       box-shadow: 0 10px 25px rgba(212,175,55,.45);
-    }
-
-    .btn-signup {
-      background: transparent;
-      color: var(--text);
-      border: 1px solid rgba(212,175,55,.4);
-    }
-
-    .btn-signup:hover {
-      background: rgba(212,175,55,.08);
-      transform: translateY(-2px);
     }
 
     .socials {
       margin-top: 20px;
-      display: flex;
-      justify-content: center;
-      gap: 15px;
     }
 
     .socials a {
       color: var(--gold-light);
-      font-size: 22px;
+      font-size: 28px;
       transition: transform .3s, color .3s;
+      text-decoration: none;
     }
 
     .socials a:hover {
@@ -145,7 +132,7 @@
 
   <script type="module">
     import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword } 
+    import { getAuth, signInWithEmailAndPassword } 
       from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
 
     const firebaseConfig = {
@@ -168,16 +155,19 @@
         .catch((error) => alert(error.message));
     };
 
-    window.signup = function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      createUserWithEmailAndPassword(auth, email, password)
-        .then(() => {
-          alert("✅ تم إنشاء الحساب بنجاح");
-          window.location.href = "index.html";
-        })
-        .catch((error) => alert(error.message));
-    };
+    // تأثير 3D للزر
+    document.addEventListener("DOMContentLoaded", () => {
+      const btn = document.querySelector(".btn");
+      btn.addEventListener("mousemove", (e) => {
+        const rect = btn.getBoundingClientRect();
+        const x = e.clientX - rect.left - rect.width / 2;
+        const y = e.clientY - rect.top - rect.height / 2;
+        btn.style.transform = `rotateX(${y/15}deg) rotateY(${x/15}deg) scale(1.05)`;
+      });
+      btn.addEventListener("mouseleave", () => {
+        btn.style.transform = "rotateX(0) rotateY(0) scale(1)";
+      });
+    });
   </script>
 </head>
 <body>
@@ -186,15 +176,13 @@
     <h2>تسجيل الدخول</h2>
     <input type="email" id="email" placeholder="البريد الإلكتروني">
     <input type="password" id="password" placeholder="كلمة المرور">
-    <button class="btn btn-login" onclick="login()">دخول</button>
-    <button class="btn btn-signup" onclick="signup()">إنشاء حساب</button>
+    <button class="btn" onclick="login()">🚀 دخول</button>
     
     <div class="socials">
-      <a href="https://instagram.com/" target="_blank">📸</a>
-      <a href="https://facebook.com/" target="_blank">🌐</a>
-      <a href="https://t.me/" target="_blank">✈</a>
+      <a href="https://instagram.com/monex_academy" target="_blank">📸</a>
     </div>
   </div>
 </body>
 </html>
+
 
