--- a/login.html
+++ b/login.html
@@ -2,41 +2,57 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>تسجيل الدخول | أكاديمية مونكس</title>
   <style>
     :root {
       --gold: #d4af37;
-      --gold-light: #f9e07f;
-      --bg-dark: #0b0b0c;
-      --text: #f7f7f7;
-      --radius: 20px;
-      --shadow: 0 12px 35px rgba(0,0,0,.6);
+      --gold-light: #f8e28e;
+      --dark-bg: #0e0e0e;
     }
 
     body {
       margin: 0;
       font-family: "Cairo", sans-serif;
-      background: radial-gradient(circle at top, #1a1a1d, #0b0b0c);
-      color: var(--text);
-      min-height: 100vh;
+      background: linear-gradient(135deg, #0e0e0e, #1a1a1a);
+      color: white;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 15px;
+      height: 100vh;
+      overflow: hidden;
+    }
+
+    /* خلفية 3D */
+    body::before {
+      content: "";
+      position: absolute;
+      width: 200%;
+      height: 200%;
+      background: radial-gradient(circle at center, rgba(212,175,55,0.1), transparent 70%),
+                  repeating-linear-gradient(45deg, rgba(255,255,255,0.02) 0px, rgba(255,255,255,0.02) 2px, transparent 2px, transparent 6px);
+      animation: moveBg 15s linear infinite;
+      z-index: -1;
+    }
+    @keyframes moveBg {
+      from { transform: translate(0,0); }
+      to { transform: translate(-200px,-200px); }
     }
 
     .login-box {
+      background: rgba(20,20,20,0.9);
+      padding: 35px;
+      border-radius: 20px;
+      box-shadow: 0 0 25px rgba(212,175,55,0.3);
       width: 100%;
-      max-width: 380px;
-      padding: 35px 25px;
-      background: linear-gradient(145deg, #141414, #1d1d21);
-      border-radius: var(--radius);
-      box-shadow: inset -4px -4px 10px rgba(255,255,255,.05),
-                  inset 4px 4px 10px rgba(0,0,0,.6),
-                  var(--shadow);
+      max-width: 360px;
       text-align: center;
-      animation: fadeIn 0.9s ease;
+      backdrop-filter: blur(8px);
+      animation: float 4s ease-in-out infinite;
+    }
+    @keyframes float {
+      0%,100% { transform: translateY(0); }
+      50% { transform: translateY(-8px); }
     }
 
     .logo {
@@ -44,63 +60,71 @@
       height: 90px;
       border-radius: 50%;
       margin-bottom: 15px;
-      border: 3px solid var(--gold);
-      box-shadow: 0 0 25px rgba(212,175,55,.4);
       object-fit: cover;
+      border: 3px solid var(--gold);
+      box-shadow: 0 0 20px rgba(212,175,55,.4),
+                  0 8px 15px rgba(0,0,0,0.6);
       animation: glow 2s infinite alternate;
+      transform: perspective(600px) rotateX(5deg) rotateY(-5deg);
+    }
+    @keyframes glow {
+      from { box-shadow: 0 0 10px rgba(212,175,55,.5); }
+      to { box-shadow: 0 0 25px rgba(212,175,55,.9); }
     }
 
     h2 {
       margin-bottom: 20px;
-      font-size: 24px;
-      font-weight: bold;
-      background: linear-gradient(92deg, var(--gold), var(--gold-light));
+      font-size: 22px;
+      background: linear-gradient(90deg, var(--gold), var(--gold-light));
       -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
+      -webkit-text-fill-color: transparent;
     }
 
-    input {
+    .input-box {
+      margin-bottom: 15px;
+      text-align: right;
+    }
+
+    .input-box label {
+      display: block;
+      margin-bottom: 5px;
+      font-size: 14px;
+      color: var(--gold-light);
+    }
+
+    .input-box input {
       width: 100%;
-      padding: 14px 16px;
-      margin: 10px 0;
-      border: none;
-      border-radius: 12px;
+      padding: 12px;
+      border: 1px solid var(--gold);
+      border-radius: 10px;
+      background: #1c1c1c;
+      color: white;
+      font-size: 14px;
       outline: none;
-      font-size: 15px;
-      background: #1a1a1d;
-      color: var(--text);
-      box-shadow: inset -3px -3px 6px rgba(255,255,255,.07),
-                  inset 3px 3px 6px rgba(0,0,0,.6);
-      transition: all .3s;
+      transition: 0.3s;
     }
 
-    input:focus {
-      box-shadow: inset -4px -4px 8px rgba(255,255,255,.1),
-                  inset 4px 4px 8px rgba(0,0,0,.7),
-                  0 0 10px rgba(212,175,55,.4);
-      transform: scale(1.02);
+    .input-box input:focus {
+      border-color: var(--gold-light);
+      box-shadow: 0 0 10px rgba(212,175,55,0.6);
     }
 
-    .btn {
+    button {
       width: 100%;
-      padding: 14px;
-      margin-top: 12px;
+      padding: 12px;
+      margin-top: 15px;
       border: none;
-      border-radius: 12px;
-      cursor: pointer;
-      font-size: 15px;
+      border-radius: 10px;
+      background: linear-gradient(90deg, var(--gold), var(--gold-light));
+      color: #0e0e0e;
+      font-size: 16px;
       font-weight: bold;
-      transition: all 0.2s ease;
-      background: linear-gradient(92deg, var(--gold), var(--gold-light));
-      color: #1b1400;
-      box-shadow: 0 6px 18px rgba(212,175,55,.3);
-      perspective: 500px;
-      transform-style: preserve-3d;
+      cursor: pointer;
+      transition: transform 0.3s, box-shadow 0.3s;
     }
-
-    .btn:hover {
-      box-shadow: 0 10px 25px rgba(212,175,55,.45);
+    button:hover {
+      transform: scale(1.05);
+      box-shadow: 0 0 15px rgba(212,175,55,0.7);
     }
 
     .socials {
@@ -108,78 +132,40 @@
     }
 
     .socials a {
-      color: var(--gold-light);
-      font-size: 28px;
-      transition: transform .3s, color .3s;
+      display: inline-flex;
+      align-items: center;
+      gap: 6px;
+      font-size: 18px;
+      font-weight: bold;
+      background: linear-gradient(90deg, var(--gold), var(--gold-light));
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
       text-decoration: none;
+      transition: transform .3s;
     }
 
     .socials a:hover {
-      transform: scale(1.2);
-      color: var(--gold);
-    }
-
-    @keyframes fadeIn {
-      from {opacity: 0; transform: translateY(25px);}
-      to {opacity: 1; transform: translateY(0);}
-    }
-
-    @keyframes glow {
-      from { box-shadow: 0 0 15px rgba(212,175,55,.3); }
-      to   { box-shadow: 0 0 30px rgba(212,175,55,.6); }
+      transform: scale(1.1);
     }
   </style>
-
-  <script type="module">
-    import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-app.js";
-    import { getAuth, signInWithEmailAndPassword } 
-      from "https://www.gstatic.com/firebasejs/10.12.0/firebase-auth.js";
-
-    const firebaseConfig = {
-      apiKey: "AIzaSyCoyCAdEmG9nSWmYhDTYtzkarNml2LOl5o",
-      authDomain: "monex-academ.firebaseapp.com",
-      projectId: "monex-academ",
-      storageBucket: "monex-academ.appspot.com",
-      messagingSenderId: "739982923559",
-      appId: "1:739982923559:web:82432263c1758861d3fb02"
-    };
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-
-    window.login = function () {
-      const email = document.getElementById("email").value;
-      const password = document.getElementById("password").value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => window.location.href = "index.html")
-        .catch((error) => alert(error.message));
-    };
-
-    // تأثير 3D للزر
-    document.addEventListener("DOMContentLoaded", () => {
-      const btn = document.querySelector(".btn");
-      btn.addEventListener("mousemove", (e) => {
-        const rect = btn.getBoundingClientRect();
-        const x = e.clientX - rect.left - rect.width / 2;
-        const y = e.clientY - rect.top - rect.height / 2;
-        btn.style.transform = `rotateX(${y/15}deg) rotateY(${x/15}deg) scale(1.05)`;
-      });
-      btn.addEventListener("mouseleave", () => {
-        btn.style.transform = "rotateX(0) rotateY(0) scale(1)";
-      });
-    });
-  </script>
 </head>
 <body>
   <div class="login-box">
     <img class="logo" src="524295278_1909982526403223_6740863275995580947_n.jpg" alt="شعار الأكاديمية">
     <h2>تسجيل الدخول</h2>
-    <input type="email" id="email" placeholder="البريد الإلكتروني">
-    <input type="password" id="password" placeholder="كلمة المرور">
-    <button class="btn" onclick="login()">🚀 دخول</button>
-    
+    <form>
+      <div class="input-box">
+        <label for="email">البريد الإلكتروني</label>
+        <input type="email" id="email" placeholder="أدخل بريدك">
+      </div>
+      <div class="input-box">
+        <label for="password">كلمة المرور</label>
+        <input type="password" id="password" placeholder="أدخل كلمة المرور">
+      </div>
+      <button type="submit">تسجيل الدخول</button>
+    </form>
     <div class="socials">
-      <a href="https://instagram.com/monex_academy" target="_blank">📸</a>
+      <a href="https://instagram.com/monex_academy" target="_blank">📸 Instagram</a>
     </div>
   </div>
 </body>
