--- a/login.html
+++ b/login.html
@@ -108,9 +108,6 @@
     }
 
     .socials a {
-      display: inline-flex;
-      align-items: center;
-      gap: 6px;
       color: var(--gold-light);
       font-size: 18px;
       font-weight: bold;
@@ -183,7 +180,7 @@
     <button class="btn" onclick="login()">🚀 دخول</button>
     
     <div class="socials">
-      <a href="https://instagram.com/monex_academy" target="_blank">📸 Instagram</a>
+      <a href="https://instagram.com/monex_academy" target="_blank">Instagram | Monex Academy</a>
     </div>
   </div>
 </body>
