--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
                 <span>مدة: 6 أسابيع</span>
               </div>
               <div style="margin-top:8px;">
-                <button class="btn-primary" style="padding:8px 16px; font-size:13px;" onclick="location.href='course-detail.html'">عرض الدورة</button>
+                <button class="btn-primary" style="padding:8px 16px; font-size:13px;" onclick="location.href='course1.html'">عرض الدورة</button>
               </div>
             </div>
           </div>
@@ -706,7 +706,7 @@
                 <span>مدة: 4 أسابيع</span>
               </div>
               <div style="margin-top:8px;">
-                <button class="btn-primary" style="padding:8px 16px; font-size:13px;" onclick="location.href='course-detail.html'">عرض الدورة</button>
+                <button class="btn-primary" style="padding:8px 16px; font-size:13px;" onclick="location.href='course2.html'">عرض الدورة</button>
               </div>
             </div>
           </div>
@@ -724,7 +724,7 @@
                 <span>مدة: 8 أسابيع</span>
               </div>
               <div style="margin-top:8px;">
-                <button class="btn-primary" style="padding:8px 16px; font-size:13px;" onclick="location.href='course-detail.html'">عرض الدورة</button>
+                <button class="btn-primary" style="padding:8px 16px; font-size:13px;" onclick="location.href='course-3.html'">عرض الدورة</button>
               </div>
             </div>
           </div>
