--- a/course33.html
+++ b/course33.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>دورة أساسيات التداول | أكاديمية مونكس</title>
+  <title>binary option | أكاديمية مونكس</title>
   <style>
     @import url('https://fonts.googleapis.com/css2?family=Tajawal:wght@400;700&display=swap');
 
@@ -278,7 +278,7 @@
     <div class="logo">
       <img src="524295278_1909982526403223_6740863275995580947_n.jpg" alt="Logo">
     </div>
-    <h1>دورة أساسيات التداول</h1>
+    <h1>دورة vip binary option</h1>
   </header>
 
   <!-- شريط التنقل -->
