--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
         <div class="course-grid">
           <div class="course-card">
             <div class="course-thumb">
-              <img src="https://via.placeholder.com/400x180" alt="دورة التداول" loading="lazy" />
+              <img src=swing-trading-indicators (1).webp alt="دورة التداول" loading="lazy" />
             </div>
             <div class="course-content">
               <div class="badge">شائع</div>
