--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
 
           <div class="course-card">
             <div class="course-thumb">
-              <img src="https://via.placeholder.com/400x180" alt="VIP FOREX" loading="lazy" />
+              <img src="Forex-Trading.webp" alt="VIP FOREX" loading="lazy" />
             </div>
             <div class="course-content">
               <div class="badge">جديد</div>
