--- a/index.html
+++ b/index.html
@@ -713,7 +713,7 @@
 
           <div class="course-card">
             <div class="course-thumb">
-              <img src="https://via.placeholder.com/400x180" alt="VIP BINARY OPTIONS" loading="lazy" />
+              <img src="khong-ban-duoc-co-phieu+(2).jpg" alt="VIP BINARY OPTIONS" loading="lazy" />
             </div>
             <div class="course-content">
               <div class="badge">مميز</div>
